[tool.poetry]
name = "libraryms"
version = "0.1.0"
description = ""
authors = ["NikhilGiri29 <nikhu.irig29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.7.7"
anyio = "3.5.0"
asgiref = "3.5.1"
CacheControl = "0.12.11"
cachy = "0.3.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
cleo = "0.8.1"
click = "8.1.3"
clikit = "0.6.2"
crashtest = "0.3.1"
cryptography = "37.0.2"
distlib = "0.3.4"
dnspython = "2.2.1"
email-validator = "1.2.1"
fastapi = "0.75.2"
filelock = "3.6.0"
greenlet = "1.1.2"
h11 = "0.13.0"
html5lib = "1.1"
httptools = "0.4.0"
idna = "3.3"
importlib-metadata = "4.11.3"
importlib-resources = "5.7.1"
itsdangerous = "2.1.2"
jeepney = "0.8.0"
Jinja2 = "3.1.2"
keyring = "23.5.0"
lockfile = "0.12.2"
Mako = "1.2.0"
MarkupSafe = "2.1.1"
msgpack = "1.0.3"
orjson = "3.6.8"
packaging = "20.9"
passlib = "1.7.4"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.8.2"
platformdirs = "2.5.2"
poetry = "1.1.13"
poetry-core = "1.0.8"
psycopg2 = "2.9.3"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydantic = "1.9.0"
pylev = "1.4.0"
pyparsing = "3.0.8"
python-dotenv = "0.20.0"
python-multipart = "0.0.5"
PyYAML = "6.0"
requests = "2.27.1"
requests-toolbelt = "0.9.1"
SecretStorage = "3.3.2"
shellingham = "1.4.0"
six = "1.16.0"
sniffio = "1.2.0"
SQLAlchemy = "1.4.36"
starlette = "0.17.1"
tomlkit = "0.10.2"
typing-extensions = "4.2.0"
ujson = "5.2.0"
urllib3 = "1.26.9"
uvicorn = "0.17.6"
uvloop = "0.16.0"
virtualenv = "20.14.1"
watchgod = "0.8.2"
webencodings = "0.5.1"
websockets = "10.3"
zipp = "3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
